--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+.sky {
+  background: url('images/sky.png') no-repeat center center fixed;
+  background-size: cover;
+}
+
 .git-cookbook {
   background: url('images/git-cookbook.png') no-repeat center center fixed;
   background-size: contain;
@@ -41,6 +46,15 @@
 .merge-problem {
   background: url('images/fucked-up-git-guitar-hero.png') no-repeat center center fixed;
   background-size: contain;
+}
+
+.sky .slide-content {
+  position: absolute;
+  right: 0;
+  bottom: 5%;
+  left: 0;
+  color: white;
+  height: auto;
 }
 
 .commit-id-equation {
